# k210-sdk-stuff

./: CODE_OF_CONDUCT.md  COPYING  README.md
doc/: k210.dtsi  kpu.md  memory_map.md  mmu_notes.md  onboard.md  otp_layout.md
linux/: .gitignore  Makefile  README.md  esptun.c  term.c
r2/: README.md
r2/k210_otp/: rc
r2/k210_rom/: rc
rom/: AUTHORS.txt  MMAP.txt  README.md  STRINGS.txt  entry.S  k210.rom.c  k210.rom.h
rust/: Cargo.toml  openocd.cfg
rust/accelerometer/: Cargo.toml  README.md
rust/accelerometer/src/: main.rs
rust/buffered-uart/: Cargo.toml  README.md  trap.x
rust/buffered-uart/src/: lib.rs
rust/cryptest/: Cargo.toml  README.md
rust/cryptest/src/: main.rs
rust/dvp-ov/: Cargo.toml  README.md
rust/dvp-ov/src/: main.rs
rust/embgfx/: Cargo.toml  README.md
rust/embgfx/src/: main.rs
rust/esp8266at/: Cargo.toml  README.md
rust/esp8266at/examples/: parsetest.rs
rust/esp8266at/src/: handler.rs  lib.rs  mainloop.rs  response.rs  util.rs
rust/game-of-life/: Cargo.toml  README.md  gen-block-sprite.py
rust/game-of-life/src/: main.rs
rust/glyph-mapping/: Cargo.toml  README.md
rust/glyph-mapping/src/: main.rs
rust/interrupt/: Cargo.toml  README.md  build.rs
rust/interrupt/src/: aligned_as.rs  main.rs
rust/k210-console/: Cargo.toml  README.md  build.rs  gdb_init  memory.x
rust/k210-console/.cargo/: config
rust/k210-console/data/: README.md  values.tsv
rust/k210-console/scripts/: create_tables.py  gencolorfont.py
rust/k210-console/src/: board.rs  color.rs  console.rs  coord.rs  cp437.rs  cp437_8x8.rs  example_colorfont.rs  lfsr.rs  lib.rs  main.rs  palette_xterm256.rs
rust/k210-console/src/soc/: gpio.rs  gpiohs.rs  utils.rs
rust/k210-shared/: Cargo.toml  README.md  memory.x
rust/k210-shared/src/: board.rs  debug.rs  lib.rs  panic.rs  soc.rs  timing.rs  util.rs
rust/k210-shared/src/board/: def.rs  lcd.rs  lcd_colors.rs  lcd_render.rs  msa300.rs  ns2009.rs  ov2640.rs  sdcard.rs
rust/k210-shared/src/soc/: aes.rs  dmac.rs  dvp.rs  fpioa.rs  gpio.rs  gpiohs.rs  i2c.rs  pwm.rs  sha256.rs  sleep.rs  spi.rs  sysctl.rs  utils.rs
rust/k210-shared/src/soc/sysctl/: pll_compute.rs
rust/k210-shared/src/util/: filters.rs
rust/mandelbrot/: Cargo.toml  README.md
rust/mandelbrot/src/: main.rs
rust/rgbcontrol/: Cargo.toml  README.md
rust/rgbcontrol/src/: main.rs
rust/sdlcd/: Cargo.toml  README.md
rust/sdlcd/src/: main.rs
rust/sdtest/: Cargo.toml  README.md
rust/sdtest/src/: main.rs
rust/secp256k1-test/: Cargo.toml  README.md
rust/secp256k1-test/src/: main.rs
rust/term-server/: Cargo.toml  README.md
rust/term-server/.cargo/: config
rust/term-server/src/: config.rs.example  main.rs
rust/uart-passthrough/: Cargo.toml  README.md
rust/uart-passthrough/.cargo/: config
rust/uart-passthrough/demo/: esp8266.py  weather.py
rust/uart-passthrough/src/: main.rs
rust/voxel/: Cargo.toml  README.md
rust/voxel/scripts/: convert.py
rust/voxel/src/: main.rs  map_data.rs
rust/weather/: .gitignore  Cargo.toml  README.md
rust/weather/src/: main.rs
src/dump_otp/: README.md  main.c
src/glyph_mapping/: README.md  cp437_8x8.h  lcd.c  main.c  nt35310.c  nt35310.h
src/secp256k1_bench/: main.c
src/secp256k1_tests/: README.md  libsecp256k1-config.h  tests.c
src/secp256k1_tests/contrib/: lax_der_parsing.c.h  lax_der_parsing.h  lax_der_privatekey_parsing.c.h  lax_der_privatekey_parsing.h
util/esp8266at/: Cargo.toml
util/esp8266at/data/: parses.txt
util/esp8266at/examples/: serial.rs
util/esp8266at/src/: handler.rs  mainloop.rs  response.rs  traits.rs
