[workspace]
members = [
    "k210-console",
    "mandelbrot",
    "game-of-life",
    "accelerometer",
    "uart-passthrough",
    "rgbcontrol",
    "weather",
    "dvp-ov",
    "glyph-mapping",
    "term-server",
    "secp256k1-test",
    "sdtest",
    "sdlcd",
    "interrupt",
    "embgfx",
]

[patch.crates-io]

# TODO: upstream these patches after the dependent change rust-lang/rust#62281 ends up in stable
# patch: "risc-v: Use medany model"
cc = { git = "https://github.com/laanwj/cc-rs.git", rev = "83e66a79a25b55d0aa84db42257a8edbb0095cf8" }
