[workspace]
members = [
    "k210-console",
    "mandelbrot",
    "game-of-life",
    "accelerometer",
    "uart-passthrough",
    "rgbcontrol",
    "weather",
    "dvp-ov",
    "glyph-mapping",
    "term-server",
    "secp256k1-test",
    "sdtest",
    "sdlcd",
    "interrupt",
    "embgfx",
    "voxel",
]

[patch.crates-io]

# This patch was merged upstream, unfortunately, rust-secp256k1 puts a restriction on 
# cc_rs <= 1.0.41 so we can't actually use the newer version yet.
cc = { git = "https://github.com/laanwj/cc-rs.git", rev = "83e66a79a25b55d0aa84db42257a8edbb0095cf8" }
