[package]
name = "cryptest"
version = "0.1.0"
authors = ["W.J. van der Laan <laanwj@protonmail.com>"]
edition = "2018"

[dependencies]
k210-hal = "0.2.0"
k210-shared = { path = "../k210-shared" }
riscv = "0.5"
riscv-rt = "0.7"
hex-literal = "0.2"
sha2 = { version = "0.8", default-features = false }
aes-soft = { version = "0.3" }
