[package]
name = "term-server"
version = "0.1.0"
authors = ["W.J. van der Laan <laanwj@protonmail.com>"]
edition = "2018"

[dependencies]
embedded-hal = { version = "0.2.1", features = ["unproven"] }
nb = "0.1.1"
riscv-rt = "0.7"
k210-hal = "0.2.0"
riscv = "0.5"
k210-shared = { path = "../k210-shared" }
k210-console = { path = "../k210-console" }
esp8266at = { path = "../../util/esp8266at", default-features = false }
buffered-uart = { path = "../buffered-uart" }
